fixed bug with align for option buttons

--- a/cms/static/sass/elements/_xblocks.scss
+++ b/cms/static/sass/elements/_xblocks.scss
@@ -978,3 +978,8 @@ div.wrapper-comp-editor.is-inactive ~ div.launch-latex-compiler {
     padding: ($baseline / 2) 0 ($baseline * 0.4);
   }
 }
+
+// xblock survey
+td.survey-option{
+  text-align: center;
+}
